fixed invisible navbar

--- a/src/main/resources/static/Style.css
+++ b/src/main/resources/static/Style.css
@@ -15,7 +15,6 @@ body {
 }
 
 .topnav {
-    overflow: hidden;
     background-color: #333;
 }
 
